# shine

./: README.md  pyproject.toml
shine/: bubbles.py  observable.py  syntax.py
tests/: example.json  test_parsing.py
