[tool.poetry]
name = "shine"
version = "0.1.0"
description = ""
authors = ["Fen <fen@fen.sh>", "Eszter <info@eszter.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
