[tool.poetry]
name = "shine"
version = "0.1.0"
description = ""
authors = ["Fen <fen@fen.sh>", "Eszter <info@eszter.cc>"]
readme = "README.md"
packages = [
    { include = "shine" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
